--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -73,7 +73,7 @@ jobs:
               run: |
                   pip install compiledb
                   cp artisoptions_nltenebular.h artisoptions.h
-                  compiledb --full-path make sn3d exspec
+                  compiledb -n --full-path make sn3d exspec
 
             - name: cat compile_commands.json
               run: |
