--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -72,7 +72,7 @@ jobs:
                   pip install compiledb
                   cp artisoptions_nltenebular.h artisoptions.h
 
-                  compiledb -n --full-path make sn3d exspec
+                  python -m compiledb -n --full-path make sn3d exspec
 
             - name: cat compile_commands.json
               run: cat compile_commands.json
