--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -56,6 +56,7 @@ jobs:
             - name: install llvm
               run: |
                   brew install llvm || true
+                  brew link llvm
 
                   echo "CXX=clang-17" >> $GITHUB_ENV
                   echo "OMPI_CXX=clang-17" >> $GITHUB_ENV
