--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -62,8 +62,8 @@ jobs:
                   echo "CXX=clang-17" >> $GITHUB_ENV
                   echo "OMPI_CXX=clang-17" >> $GITHUB_ENV
 
-                  echo "CFLAGS=-I/usr/local/opt/include" >> $GITHUB_ENV
-                  echo "LDFLAGS=-L/usr/local/opt/lib" >> $GITHUB_ENV
+                  echo "LDFLAGS="-L/usr/local/opt/llvm/lib" >> $GITHUB_ENV
+                  echo "CPPFLAGS="-I/usr/local/opt/llvm/include" >> $GITHUB_ENV
 
                   echo "LDFLAGS=-L/usr/local/opt/libomp/lib" >> $GITHUB_ENV
                   echo "CXXFLAGS=-I/usr/local/opt/libomp/include" >> $GITHUB_ENV
