--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -79,13 +79,14 @@ jobs:
               uses: actions/setup-python@v4
               with:
                   cache: pip
+                  python-version: '3.12'
 
             - name: Generate compile_commands.json
               run: |
-                  pip install compiledb
+                  python3 -m pip install compiledb
                   cp artisoptions_nltenebular.h artisoptions.h
 
-                  python -m compiledb -n --full-path make MPI=OFF sn3d exspec
+                  python3 -m compiledb -n --full-path make MPI=OFF sn3d exspec
 
             - name: cat compile_commands.json
               run: cat compile_commands.json
