--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -73,6 +73,8 @@ jobs:
 
                   echo "CPATH=/usr/local/opt/include" >> $GITHUB_ENV
 
+                  echo "-L/opt/homebrew/opt/llvm/lib/c++ -Wl,-rpath,/opt/homebrew/opt/llvm/lib/c++"  >> $GITHUB_ENV
+
                   echo "compiledb" > requirements.txt
 
             - name: Set up Python
