--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -48,6 +48,10 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
+            - uses: maxim-lobanov/setup-xcode@v1
+              with:
+                  xcode-version: 'latest-stable'
+
             - name: install dependencies
               run: |
                   brew update
@@ -75,7 +79,7 @@ jobs:
 
                   #echo 'LDFLAGS=-L/usr/local/opt/llvm/lib/c++ -Wl,-rpath,/usr/local/opt/llvm/lib/c++' >> $GITHUB_ENV
 
-                  xcode-select -s /Applications/Xcode_15.0.1.app/Contents/Developer
+                  #sudo xcode-select --switch /Applications/Xcode_15.0.1.app/Contents/Developer
 
                   echo "compiledb" > requirements.txt
 
