--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -63,8 +63,8 @@ jobs:
                   brew install llvm || true
                   echo "/usr/local/opt/llvm/bin" >> $GITHUB_PATH
 
-                  echo "CXX=clang-17" >> $GITHUB_ENV
-                  echo "OMPI_CXX=clang-17" >> $GITHUB_ENV
+                  echo "CXX=clang++" >> $GITHUB_ENV
+                  echo "OMPI_CXX=clang++" >> $GITHUB_ENV
 
                   echo "LDFLAGS=-L/usr/local/opt/llvm/lib" >> $GITHUB_ENV
                   echo "CPPFLAGS=-I/usr/local/opt/llvm/include" >> $GITHUB_ENV
@@ -76,10 +76,6 @@ jobs:
                   echo "LD_LIBRARY_PATH=/usr/local/opt/lib" >> $GITHUB_ENV
 
                   echo "CPATH=/usr/local/opt/include" >> $GITHUB_ENV
-
-                  #echo 'LDFLAGS=-L/usr/local/opt/llvm/lib/c++ -Wl,-rpath,/usr/local/opt/llvm/lib/c++' >> $GITHUB_ENV
-
-                  #sudo xcode-select --switch /Applications/Xcode_15.0.1.app/Contents/Developer
 
                   echo "compiledb" > requirements.txt
 
