Revert "Update ci-checks.yml"
This reverts commit 8305c1d274a299facd713787818ad14e9e6a91d2.

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -116,6 +116,9 @@ jobs:
                     ]
                 mpi: [ON, OFF]
                 openmp: [ON, OFF]
+                exclude:
+                    - compiler: {name: clang, ver: 15}
+                      openmp: ON
             fail-fast: false
 
         name: ${{ matrix.compiler.name }}-${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
