disable expansionopac test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
                         kilonova_1d_1dgrid,
                         kilonova_1d_3dgrid,
                         kilonova_2d_2dgrid,
-                        kilonova_2d_2dgrid_expansionopac,
+                        # kilonova_2d_2dgrid_expansionopac,
                         kilonova_2d_3dgrid,
                         nebularonezone_1d_3dgrid,
                     ]
