--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -5,9 +5,9 @@ on:
     push:
         branches-ignore:
             - classic*
-  # pull_request:
-  #     branches-ignore:
-  #         - classic*
+    # pull_request:
+    #     branches-ignore:
+    #         - classic*
 
 jobs:
     cppcheck:
@@ -19,7 +19,7 @@ jobs:
             - name: install dependencies
               run: |
                   brew update
-                  brew install gsl openmpi cppcheck
+                  brew install gsl openmpi cppcheck || true
                   cp artisoptions_nltenebular.h artisoptions.h
 
             - name: run cppcheck and check for errors
@@ -108,9 +108,9 @@ jobs:
             - name: install gsl
               run: sudo apt install libgsl-dev
 
-      # - name: Set compiler environment variables (MPI off)
-      #   if: matrix.mpi == 'OFF'
-      #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
+            # - name: Set compiler environment variables (MPI off)
+            #   if: matrix.mpi == 'OFF'
+            #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
 
             - name: Set compiler environment variables (MPI on)
               if: matrix.mpi == 'ON'
