--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
             - classic*
     schedule:
         - cron: 0 13 * * 1
+    workflow_dispatch:
     # pull_request:
     #     branches-ignore:
     #         - classic*
@@ -21,7 +22,16 @@ jobs:
                 # os: ['ubuntu-latest', 'self-hosted']
                 os: [ubuntu-22.04]
                 testmode: [OFF, ON]
-                testname: [classicmode_1d_3dgrid, classicmode_3d, kilonova_1d_1dgrid, kilonova_1d_3dgrid, kilonova_2d_2dgrid, kilonova_2d_3dgrid, nebularonezone_1d_3dgrid]
+                testname:
+                    [
+                        classicmode_1d_3dgrid,
+                        classicmode_3d,
+                        kilonova_1d_1dgrid,
+                        kilonova_1d_3dgrid,
+                        kilonova_2d_2dgrid,
+                        kilonova_2d_3dgrid,
+                        nebularonezone_1d_3dgrid,
+                    ]
                 exclude:
                     - os: self-hosted
                       testmode: ON
@@ -32,7 +42,7 @@ jobs:
         name: ${{ matrix.testname }}${{ matrix.testmode == 'ON' && ' testmode ON' || ''}}
 
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
 
@@ -139,6 +149,7 @@ jobs:
               if: always()
               working-directory: tests/${{ matrix.testname }}_testrun/
               run: |
+                  rm *.tmp
                   mkdir job1
                   ../../scripts/movefiles.sh job1
 
@@ -170,9 +181,6 @@ jobs:
               working-directory: tests/${{ matrix.testname }}_testrun/
               run: |
                   mkdir output
-                  cp -r output_0-0.txt exspec.txt ratecoeff*.dat *.out output/
-                  rsync -av job0 output/
-                  rsync -av job1 output/
                   cat exspec.txt
 
             - name: Checksum job1 output files
@@ -187,7 +195,6 @@ jobs:
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
                   touch requirements.txt
-                  rm output/packets*.*
                   find . -name "*_res_*.out" -exec zstd -v -T0 --rm -f {} \;
 
             - name: Upload output files
@@ -195,7 +202,7 @@ jobs:
               if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
               with:
                   name: test-${{ matrix.testname }}-output
-                  path: tests/${{ matrix.testname }}_testrun/output
+                  path: tests/${{ matrix.testname }}_testrun
 
             - name: Upload checksum files
               uses: actions/upload-artifact@v3
