--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -5,21 +5,21 @@ on:
     push:
         branches-ignore:
             - classic*
-  # pull_request:
-  #     branches-ignore:
-  #         - classic*
+    workflow_dispatch:
+    # pull_request:
+    #     branches-ignore:
+    #         - classic*
 
 jobs:
     cppcheck:
-        runs-on: macos-latest
-
+        runs-on: macos-13
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
             - name: install dependencies
               run: |
                   brew update
-                  brew install gsl openmpi cppcheck
+                  brew install gsl openmpi cppcheck || true
                   cp artisoptions_nltenebular.h artisoptions.h
 
             - name: run cppcheck and check for errors
@@ -34,9 +34,8 @@ jobs:
 
     clang-format:
         runs-on: ubuntu-22.04
-
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
             - name: Run clang-format style check
               uses: jidicula/clang-format-action@v4.11.0
@@ -44,29 +43,87 @@ jobs:
                   clang-format-version: '16'
                   check-path: .
 
+    clang-tidy:
+        runs-on: macos-13
+        steps:
+            - uses: actions/checkout@v4
+
+            - uses: maxim-lobanov/setup-xcode@v1
+              with:
+                  xcode-version: 'latest-stable'
+
+            - name: install dependencies
+              run: |
+                  brew update
+                  brew install openmpi gsl || true
+                  brew link openmpi
+
+            - name: install llvm
+              run: |
+                  brew install llvm || true
+                  echo "/usr/local/opt/llvm/bin" >> $GITHUB_PATH
+
+                  echo "CXX=clang++" >> $GITHUB_ENV
+                  echo "OMPI_CXX=clang++" >> $GITHUB_ENV
+
+                  echo "LDFLAGS=-L/usr/local/opt/llvm/lib" >> $GITHUB_ENV
+                  echo "CPPFLAGS=-I/usr/local/opt/llvm/include" >> $GITHUB_ENV
+
+                  echo "LDFLAGS=-L/usr/local/opt/libomp/lib" >> $GITHUB_ENV
+                  echo "CXXFLAGS=-I/usr/local/opt/libomp/include" >> $GITHUB_ENV
+
+                  echo "LIBRARY_PATH=/usr/local/opt/lib" >> $GITHUB_ENV
+                  echo "LD_LIBRARY_PATH=/usr/local/opt/lib" >> $GITHUB_ENV
+
+                  echo "CPATH=/usr/local/opt/include" >> $GITHUB_ENV
+
+                  echo "compiledb" > requirements.txt
+
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  cache: pip
+                  python-version: '3.12'
+
+            - name: Generate compile_commands.json
+              run: |
+                  python3 -m pip install compiledb
+                  cp artisoptions_nltenebular.h artisoptions.h
+                  make version.h
+                  python3 -m compiledb -n --full-path make
+
+            - name: cat compile_commands.json
+              run: cat compile_commands.json
+
+            - name: run-clang-tidy
+              run: |
+                  clang-tidy --version
+                  run-clang-tidy
+
     compile:
         runs-on: ubuntu-22.04
+        env:
+            CXX: g++
         strategy:
             matrix:
-                compiler: [{name: gcc, ver: 11}, {name: gcc, ver: 12}, {name: gcc, ver: 13}, {name: clang, ver: 14}, {name: clang, ver: 15}]
+                compiler:
+                    [
+                        {name: gcc, ver: 11},
+                        {name: gcc, ver: 12},
+                        {name: gcc, ver: 13},
+                        {name: clang, ver: 14},
+                        {name: clang, ver: 15},
+                    ]
                 mpi: [ON, OFF]
                 openmp: [ON, OFF]
-                artisoptionsfile: [artisoptions_classic.h, artisoptions_nltenebular.h]
                 exclude:
-                    - compiler: {name: gcc, ver: 11}
-                      openmp: ON
-                    - compiler: {name: gcc, ver: 12}
-                      openmp: ON
-                    - compiler: {name: gcc, ver: 13}
-                      openmp: ON
                     - compiler: {name: clang, ver: 15}
                       openmp: ON
             fail-fast: false
 
         name: ${{ matrix.compiler.name }}-${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
-            ${{ matrix.artisoptionsfile }}
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
             - name: CPU type and core count
               id: cpu-count
@@ -108,9 +165,9 @@ jobs:
             - name: install gsl
               run: sudo apt install libgsl-dev
 
-      # - name: Set compiler environment variables (MPI off)
-      #   if: matrix.mpi == 'OFF'
-      #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
+            # - name: Set compiler environment variables (MPI off)
+            #   if: matrix.mpi == 'OFF'
+            #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
 
             - name: Set compiler environment variables (MPI on)
               if: matrix.mpi == 'ON'
@@ -123,7 +180,12 @@ jobs:
               run: |
                   ${{ env.CXX }} --version
 
-            - name: Compile
+            - name: Compile classic mode
               run: |
-                  cp -v -p ${{ matrix.artisoptionsfile }} artisoptions.h
+                  cp -v -p artisoptions_classic.h artisoptions.h
+                  make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
+
+            - name: Compile nebular mode
+              run: |
+                  cp -v -p artisoptions_classic.h artisoptions.h
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
