Update vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,11 @@
     "[cpp]": {
         "editor.tabSize": 2,
         "editor.codeActionsOnSave": {
-            "source.fixAll": true
+            "source.fixAll": "always"
         },
         "editor.formatOnSave": true
     },
     "[yaml]": {
         "editor.tabSize": 4
-    },
-    "sonarlint.pathToCompileCommands": "${workspaceFolder}/compile_commands.json"
+    }
 }
