--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -25,7 +25,7 @@ jobs:
             - name: run cppcheck and check for errors
               run: |
                   cppcheck --version
-                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability .
+                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability  --suppress=memleak .
 
             - name: show cppcheck style suggestions
               run: |
