--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -141,21 +141,23 @@ jobs:
                   sudo add-apt-repository multiverse
                   sudo apt-get update
 
-            - name: Install gcc-${{ matrix.compiler.ver }}
+            - name: Install gcc
               if: matrix.compiler.name == 'gcc'
               run: |
                   sudo apt install -y gcc-${{ matrix.compiler.ver }} g++-${{ matrix.compiler.ver }}
                   echo "CXX=g++-${{ matrix.compiler.ver }}" >> $GITHUB_ENV
 
-            - name: Install clang-${{ matrix.compiler.ver }}
+            - name: Install clang
               if: matrix.compiler.name == 'clang'
               run: |
                   sudo apt install -y clang-${{ matrix.compiler.ver }} --install-suggests
                   echo "CXX=clang++-${{ matrix.compiler.ver }}" >> $GITHUB_ENV
 
-            - name: Install nvc++ ${{ matrix.compiler.ver }}
+            - name: Install nvc++
               if: matrix.compiler.name == 'nvc++'
               uses: fortran-lang/setup-fortran@v1.3
+              id: setup-fortran
+              continue-on-error: true
               with:
                   compiler: nvidia-hpc
                   version: ${{ matrix.compiler.ver }}
