--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -155,7 +155,7 @@ jobs:
 
             - name: Install nvc++
               if: matrix.compiler.name == 'nvc++'
-              uses: fortran-lang/setup-fortran@v1.3
+              uses: fortran-lang/setup-fortran@adec3afacab7018f30d4e2cadae1cb42530aeaf5
               id: setup-fortran
               continue-on-error: true
               with:
