--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -122,7 +122,7 @@ jobs:
                       openmp: ON
             fail-fast: false
 
-        name: ${{ matrix.compiler.name }}-${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
+        name: ${{ matrix.compiler.name }} ${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
         steps:
             - uses: actions/checkout@v4
 
@@ -179,6 +179,78 @@ jobs:
             # - name: Set compiler environment variables (MPI off)
             #   if: matrix.mpi == 'OFF'
             #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
+
+            - name: Set compiler environment variables (MPI on)
+              if: matrix.mpi == 'ON'
+              run: |
+                  echo "OMPI_CXX=$CXX" >> $GITHUB_ENV
+                  echo "CXX=mpicxx" >> $GITHUB_ENV
+                  mpicxx --showme:version
+
+            - name: Show compiler version and CPU type
+              run: |
+                  ${{ env.CXX }} --version
+
+            - name: Compile classic mode
+              run: |
+                  cp -v -p artisoptions_classic.h artisoptions.h
+                  make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
+
+            - name: Compile nebular mode
+              run: |
+                  cp -v -p artisoptions_classic.h artisoptions.h
+                  make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
+
+    mac-llvm:
+        runs-on: macos-13
+        env:
+            CXX: clang++
+        strategy:
+            matrix:
+                mpi: [ON, OFF]
+                openmp: [ON, OFF]
+            fail-fast: false
+
+        name: macOS clang 17 ${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
+
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: CPU type and core count
+              id: cpu-count
+              run: |
+                  g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
+                  # echo "count=$(python3 -c 'import psutil; print(int(psutil.cpu_count(logical=False)))')" >> $GITHUB_OUTPUT
+                  echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
+
+            - uses: maxim-lobanov/setup-xcode@v1
+              with:
+                  xcode-version: 'latest-stable'
+
+            - name: install dependencies
+              run: |
+                  brew update
+                  brew install openmpi gsl libomp || true
+                  brew link openmpi
+
+            - name: install llvm
+              run: |
+                  brew install llvm@17 || true
+                  echo "/usr/local/opt/llvm/bin" >> $GITHUB_PATH
+
+                  echo "CXX=clang++" >> $GITHUB_ENV
+                  echo "OMPI_CXX=clang++" >> $GITHUB_ENV
+
+                  echo "LDFLAGS=-L/usr/local/opt/llvm/lib" >> $GITHUB_ENV
+                  echo "CPPFLAGS=-I/usr/local/opt/llvm/include" >> $GITHUB_ENV
+
+                  echo "LDFLAGS=-L/usr/local/opt/libomp/lib" >> $GITHUB_ENV
+                  echo "CXXFLAGS=-I/usr/local/opt/libomp/include" >> $GITHUB_ENV
+
+                  echo "LIBRARY_PATH=/usr/local/opt/lib" >> $GITHUB_ENV
+                  echo "LD_LIBRARY_PATH=/usr/local/opt/lib" >> $GITHUB_ENV
+
+                  echo "CPATH=/usr/local/opt/include" >> $GITHUB_ENV
 
             - name: Set compiler environment variables (MPI on)
               if: matrix.mpi == 'ON'
