--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -133,14 +133,6 @@ jobs:
                   # echo "count=$(python3 -c 'import psutil; print(int(psutil.cpu_count(logical=False)))')" >> $GITHUB_OUTPUT
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
-            - name: apt update
-              run: |
-                  sudo add-apt-repository main
-                  sudo add-apt-repository universe
-                  sudo add-apt-repository restricted
-                  sudo add-apt-repository multiverse
-                  sudo apt-get update
-
             - name: Install gcc
               if: matrix.compiler.name == 'gcc'
               uses: fortran-lang/setup-fortran@adec3afacab7018f30d4e2cadae1cb42530aeaf5
@@ -152,6 +144,11 @@ jobs:
             - name: Install clang
               if: matrix.compiler.name == 'clang'
               run: |
+                  sudo add-apt-repository main
+                  sudo add-apt-repository universe
+                  sudo add-apt-repository restricted
+                  sudo add-apt-repository multiverse
+                  sudo apt-get update
                   sudo apt install -y clang-${{ matrix.compiler.ver }} --install-suggests
                   echo "CXX=clang++-${{ matrix.compiler.ver }}" >> $GITHUB_ENV
 
@@ -163,29 +160,21 @@ jobs:
                   compiler: nvidia-hpc
                   version: ${{ matrix.compiler.ver }}
 
+            - name: install gsl
+              run: sudo apt install libgsl-dev
+
             - name: install openmpi
               if: matrix.mpi == 'ON'
               run: |
                   sudo apt install -y openmpi-bin libopenmpi-dev
+                  echo "OMPI_CXX=$CXX" >> $GITHUB_ENV
+                  echo "CXX=mpicxx" >> $GITHUB_ENV
+                  mpicxx --showme:version
 
             - name: install OpenMP
               if: matrix.openmp == 'ON'
               run: |
                   sudo apt-get install -y libomp5-14 libomp-dev
-
-            - name: install gsl
-              run: sudo apt install libgsl-dev
-
-            # - name: Set compiler environment variables (MPI off)
-            #   if: matrix.mpi == 'OFF'
-            #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
-
-            - name: Set compiler environment variables (MPI on)
-              if: matrix.mpi == 'ON'
-              run: |
-                  echo "OMPI_CXX=$CXX" >> $GITHUB_ENV
-                  echo "CXX=mpicxx" >> $GITHUB_ENV
-                  mpicxx --showme:version
 
             - name: Show compiler version and CPU type
               run: |
@@ -230,8 +219,7 @@ jobs:
             - name: install dependencies
               run: |
                   brew update
-                  brew install openmpi gsl libomp || true
-                  brew link openmpi
+                  brew install gsl || true
 
             - name: install llvm
               run: |
@@ -252,9 +240,16 @@ jobs:
 
                   echo "CPATH=/usr/local/opt/include" >> $GITHUB_ENV
 
-            - name: Set compiler environment variables (MPI on)
+            - name: install OpenMP
+              if: matrix.openmp == 'ON'
+              run: |
+                  brew install libomp || true
+
+            - name: install OpenMPI
               if: matrix.mpi == 'ON'
               run: |
+                  brew install openmpi || true
+                  brew link openmpi
                   echo "OMPI_CXX=$CXX" >> $GITHUB_ENV
                   echo "CXX=mpicxx" >> $GITHUB_ENV
                   mpicxx --showme:version
